# tilecraft

./: .gitignore  AGENTIC_SETUP.md  CLAUDE.md  ENHANCED_AGENTIC_WORKFLOW.md  PROJECT_STATUS.md  README.md  mcp-config.md  project_structure.md  pyproject.toml  tech-decision.md
.cursor/: settings.json
docs/: AGENTIC_DEVELOPMENT_LEARNINGS_REPORT.md  PRD.md  PROJECT_STATUS.md  QGIS_TESTING_GUIDE.md  README.md  REAL_OUTPUT_ANALYSIS.md  RECOMMENDED_NEXT_STEPS.md
docs/archives/: CLAUDE.md  IMMEDIATE_ACTIONS.md  README.md
examples/: tile_generation_example.py
fixed-preview/: README.md  preview.html
preview/: README.md  config.json  preview.html
prompts/: development_assistant.md  schema_generation.md  style_generation.md  tag_disambiguation.md
src/tilecraft/: __init__.py  cli.py
src/tilecraft/ai/: __init__.py  prompts.py  schema_generator.py  style_generator.py  tag_disambiguator.py
src/tilecraft/core/: __init__.py  bbox.py  feature_extractor.py  osm_downloader.py  pipeline.py  tile_generator.py
src/tilecraft/models/: __init__.py  config.py  schemas.py
src/tilecraft/utils/: __init__.py  cache.py  preview.py  system_check.py  validation.py
test-preview/: README.md  config.json  preview.html
test-preview01/: README.md  config.json  preview.html
tests/: __init__.py  conftest.py  test_cli.py  test_feature_extractor.py  test_integration.py  test_osm_downloader.py  test_preview.py  test_system_check.py  test_tile_generator.py
